--- a/templates/interview_grant.html
+++ b/templates/interview_grant.html
@@ -23,7 +23,7 @@
                     <h3>Interview Form</h3>
                     <hr />
                 </div>
-                <form action="{{ url_for('grant_interview', grant_id=grant.grant_id) }}" method="post">
+                <form action="{{ url_for('grant_interview', grant_id=grant.grant_id) }}{{ '?review=1' if review }}" method="post">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
