--- a/static/styles.css
+++ b/static/styles.css
@@ -40,6 +40,25 @@
     border-right: solid 1px #dedede;
 }
 
+.float-right {
+    float: right;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+/* Grants Pack Review Page CSS */
+.status-indicator {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-style: italic;
+    color: #b3b3b3;
+}
+
 /* Grant Interview Page CSS */
 .resize-vertical {
     resize: vertical;
