--- a/templates/grants_pack_edit.html
+++ b/templates/grants_pack_edit.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block title %}
-    Grant Pack Review
+    Grants Pack Edit
 {% endblock %}
 
 {% block main %}
@@ -16,6 +16,7 @@
             <div class="center">
                 <h1>Grants Pack {{ grants_pack }}</h1>
                 <h3>Move grants below to accept them into the grants pack.</h3>
+                <p id="status" class="status-indicator"></p>
             </div>
         </div>
     </div>
@@ -66,7 +67,7 @@
                             {&quot;category&quot;:&quot;Travel&quot;,&quot;amount&quot;:{{ grant.travel_allocated }},&quot;description&quot;:&quot;{{ grant.travel_allocated_notes | suppress_none }}&quot;},
                         {%- endif -%}
                         {%- if grant.publicity_allocated -%}
-                            {&quot;category&quot;:&quot;Publicity&quot;,&quot;amount&quot;:{{ grant.publciity_allocated }},&quot;description&quot;:&quot;{{ grant.publicity_allocated_notes | suppress_none }}&quot;},
+                            {&quot;category&quot;:&quot;Publicity&quot;,&quot;amount&quot;:{{ grant.publicity_allocated }},&quot;description&quot;:&quot;{{ grant.publicity_allocated_notes | suppress_none }}&quot;},
                         {%- endif -%}
                         {%- if grant.materials_allocated -%}
                             {&quot;category&quot;:&quot;Materials & Supplies&quot;,&quot;amount&quot;:{{ grant.materials_allocated }},&quot;description&quot;:&quot;{{ grant.materials_allocated_notes | suppress_none }}&quot;},
@@ -95,12 +96,13 @@
                 {% endfor %}
               </select>
         </div>
+        <a id="submit" href="{{ url_for('grants_pack_cuts') }}" class="btn btn-default float-right" style="margin: 10px 15px">Submit</a>
     </div>
     
     <div class="row">
         <div class="col-md-12">
-            <div class="center margin40 grant_info">
-                <h3 id="grant_project"></h3>
+            <div class="center grant_info">
+                <h3 id="grant_project" style="margin-top:0px;"></h3>
                 <h4 id="grant_subtitle"></h4>
                 <h5 id="grant_interviewer"></h5>
                 <div id="grant_funding"></div>
@@ -122,8 +124,26 @@
           nonSelectedFilter: ''
         });
         
-        /* Define the event handler function for listboxes */
-        function handler() {
+        function updateDollarDisplay() {
+            var allocated = 0;
+            $("#bootstrap-duallistbox-selected-list_grants_list option").each(function(index,option) {
+               // parse funding data
+                var items = $(option).data('funding');
+                // remove final comma (fencepost problem)
+                if (items.length > 1) {
+                    items = items.substr(0, items.length - 2) + "]";
+                    items = jQuery.parseJSON(items);
+                }
+                for (var i=0; i< items.length; i++) {
+                    allocated += parseFloat(items[i].amount);
+                }
+            });
+            $("#dollars-allocated").text("$" + allocated);
+        }
+        
+        /* Define the event handler function for listboxes that will update the selected
+            grant information view at the bottom of the page */
+        function infoDisplayHandler() {
             
             // ensure that mutliple grants aren't selected
             if ($(this).is('select')) {
@@ -145,7 +165,6 @@
             // remove final comma (fencepost problem)
             if (items.length > 1) {
                 items = items.substr(0, items.length - 2) + "]";
-                console.log(items);
                 items = jQuery.parseJSON(items);
             }
             var funding = '<table class="table table-striped table-responsive table-hover"><thead><tr><th>Category</th><th>Amount</th><th>Description</th></tr></thead><tbody class="text-left">';
@@ -167,11 +186,61 @@
             
         }
         
+        /* Define the event handler for the listboxes that will
+            asynchronously send updates to the remote database on
+            changes in listbox selections and update the dollar
+            amount allocated shown to the user */
+        function updateDBHandler() {
+            
+            // Create an list of objects indicating whether each grant is in the pack
+            var notSelected = $("#bootstrap-duallistbox-nonselected-list_grants_list option");
+            var selected = $("#bootstrap-duallistbox-selected-list_grants_list option");
+            var values = $.map(notSelected, function(option) {
+                return { grant_id : option.value,
+                            selected : false };
+            });
+            
+            values = values.concat($.map(selected, function(option) {
+                return { grant_id : option.value,
+                            selected : true };
+            }));
+            
+            // Convert values to JSON
+            var json = '{"grants_pack":"{{ grants_pack }}","grants":' + JSON.stringify(values) + '}';
+            
+            // Set the status message to saving and temporarily disable submit button
+            $("#status").text('Saving changes...');
+            $('#submit').addClass('disabled');
+            
+            // POST that data to the server
+            $.ajax({
+                url: "{{ url_for('grants_pack_edit') }}",
+                type: "POST",
+                data: json,
+                contentType: "application/json; charset=utf-8",
+                success: function() {
+                    $("#status").text('All edits saved.');
+                    $('#submit').removeClass('disabled');
+                },
+                error: function() {
+                    $("#status").text('Error saving changes.');
+                }
+            });
+            
+            // Update the currently allocated dollar display
+            updateDollarDisplay();
+        }
+        
+        // Add a span to display the currently allocated amount
+        $('.box2 span.info-container').append('<span id="dollars-allocated" class="float-right bold"></span>');
+        updateDollarDisplay();
+        
         /* Add handler for displaying grant info on-change
             on-click handler must also be added for jumping
             between the dual boxes */
-        $('.listboxes select').change(handler);
-        $('.listboxes option').click(handler);
+        $('.listboxes select').change(infoDisplayHandler);
+        $('.listboxes option').click(infoDisplayHandler);
+        $('.listboxes button').click(updateDBHandler);
         
         
         
