--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-4">
             <div class="center">
-                <a href="{{ url_for('grants_pack_review') }}" role="button" class="btn btn-default">Grants Pack Review</a>
+                <a href="{{ url_for('grants_packs') }}" role="button" class="btn btn-default">Grants Packs</a>
             </div>
         </div>
     </div>
