--- a/templates/interviews.html
+++ b/templates/interviews.html
@@ -24,7 +24,7 @@
                 <tbody>
                     {% for grant in grants %}
                         <tr class="clickable-row" data-href="{{ url_for('grant_interview', grant_id=grant.grant_id) }}">
-                            <td>{{ grant.grant_id }}</td>
+                            <td class="text-nowrap">{{ grant.grant_id }}</td>
                             <td><b>{{ grant.organization }}</b></td>
                             <td><b>{{ grant.project }}</b></td>
                             <td>{{ grant.interview_schedule_date | datetime }}</td>
