--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,6 +39,42 @@
     </head>
 
     <body>
+        
+        <nav class="navbar navbar-findcond navbar-fixed-top">
+            <div class="container">
+        		<div class="navbar-header">
+        			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+        				<span class="sr-only">Toggle navigation</span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+        			</button>
+        			<a class="navbar-brand" href="{{ url_for('index') }}">nova</a>
+        		</div>
+        		<div class="collapse navbar-collapse" id="navbar">
+        			<ul class="nav navbar-nav navbar-right">
+        				<li class="active"><a href="#">Search <span class="sr-only">(current)</span></a></li>
+        				<li><a href="{{ url_for('interviews') }}">Interviews</a></li>
+        				<li><a href="{{ url_for('small_grants') }}">Small Grants</a></li>
+        				<li class="dropdown">
+        					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
+        					<ul class="dropdown-menu" role="menu">
+        					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
+        						<li><a href="#">Treasurer</a></li>
+                				<li><a href="#">Schedule</a></li>
+                				<li><a href="#">Settings</a></li>
+        					</ul>
+        				</li>
+        				<li class="dropdown">
+        					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nicholas Boucher <span class="caret"></span></a>
+        					<ul class="dropdown-menu" role="menu">
+        						<li><a href="#">Sign Out</a></li>
+        					</ul>
+        				</li>
+        			</ul>
+        		</div>
+        	</div>
+        </nav>
 
         <div class="container{{ '-fluid' if fullwidth }}">
 
