Added typeahead functionality

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
         		</div>
         		<div class="collapse navbar-collapse" id="navbar">
         			<ul class="nav navbar-nav navbar-right">
-        				<li class="active"><a href="#">Search <span class="sr-only">(current)</span></a></li>
+        				<li class="active"><a href="{{ url_for('search') }}">Search <span class="sr-only">(current)</span></a></li>
         				<li><a href="{{ url_for('interviews') }}">Interviews</a></li>
         				<li><a href="{{ url_for('small_grants') }}">Small Grants</a></li>
         				<li class="dropdown">
