--- a/static/styles.css
+++ b/static/styles.css
@@ -52,6 +52,10 @@
     vertical-align: middle !important;
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 /* Grants Pack Review Page CSS */
 .status-indicator {
     position: absolute;
