--- a/templates/search.html
+++ b/templates/search.html
@@ -65,6 +65,10 @@
             border-radius: 8px;
             outline: none;
         }
+        
+        .tt-selectable {
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
 
@@ -74,12 +78,13 @@
         <div class="col-md-12">
             <div class="center">
                 <h1>Search</h1>
-                <h3>Search for grants.</h3>
-                
-                 <input class="form-control typeahead" type="text" placeholder="Organization or Project">
-                
+                <input class="form-control typeahead inline-block margin40" type="text" placeholder="Organization or Project">
             </div>
         </div>
+    </div>
+    
+    <div class="row">
+        <div id="results" class="col-md-12 margin40"></div>
     </div>
     
 {% endblock %}
@@ -90,6 +95,7 @@
 
     <script type="text/javascript">
     
+        /* Create Twitter Bloodhound Search object for organizations */
         var organizations = new Bloodhound({
           datumTokenizer: Bloodhound.tokenizers.whitespace,
           queryTokenizer: Bloodhound.tokenizers.whitespace,
@@ -100,6 +106,7 @@
           }
         });
         
+        /* Create Twitter Bloodhound Search object for projects */
         var projects = new Bloodhound({
           datumTokenizer: Bloodhound.tokenizers.whitespace,
           queryTokenizer: Bloodhound.tokenizers.whitespace,
@@ -109,6 +116,7 @@
           }
         });
         
+        /* Create the Twitter Typeahead */
         $('.typeahead').typeahead({
                 highlight: true
             },
@@ -125,6 +133,29 @@
                 templates: {
                     header: '<h3 class="typeahead-title">Projects</h3>'
                 }
+            });
+            
+            /* Handle clicking of typeahead suggestion */
+            $('.typeahead').bind('typeahead:select', function(event, suggestion) {
+                console.log(event);
+                $.get("{{ url_for('lookup_grants', k=k) }}", { query : suggestion }).done(function(grants) {
+                    var html = '<table class="table table-striped table-hover table-responsive"><thead><tr><th>Grant ID</th><th>Organization</th><th>Project</th><th>Grants Pack</th><th>Interview/Review Occured</th><th>CPF Submitted</th><th>Funds Dispensed</th><th>Status Page</th></tr></thead>';
+                    for (i=0; i<grants.length; i++) {
+                        console.log(grants[i]);
+                        html += "<tr>";
+                        html += '<td class="text-nowrap">' + grants[i].grant_id + "</td>";
+                        html += "<td>" + grants[i].organization + "</td>";
+                        html += "<td>" + grants[i].project + "</td>";
+                        html += "<td>" + (grants[i].grants_pack ? grants[i].grants_pack : "") + "</td>";
+                        html += "<td>" + (grants[i].interview_or_review_occurred ? '<i class="fa fa-check" aria-hidden="true"></i>' : "") + "</td>";
+                        html += "<td>" + (grants[i].cpf_submitted ? '<i class="fa fa-check" aria-hidden="true"></i>' : "") + "</td>";
+                        html += "<td>" + (grants[i].is_paid ? '<i class="fa fa-check" aria-hidden="true"></i>' : "") + "</td>";
+                        html += "<td>" + '<a href="/grant/' + grants[i].grant_id + '" class="btn btn-default">Status Page</a>' + "</td>";
+                        html += "</tr>";
+                    }
+                    html += '</table>';
+                    $("#results").html(html);
+                });
             });
         
     </script>
