Added Treasurer Home

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,7 @@
         					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
         					<ul class="dropdown-menu" role="menu">
         					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
-        						<li><a href="#">Treasurer</a></li>
+        						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
                 				<li><a href="#">Schedule</a></li>
                 				<li><a href="#">Settings</a></li>
         					</ul>
