--- a/templates/search.html
+++ b/templates/search.html
@@ -140,6 +140,7 @@
                 console.log(event);
                 $.get("{{ url_for('lookup_grants', k=k) }}", { query : suggestion }).done(function(grants) {
                     var html = '<table class="table table-striped table-hover table-responsive"><thead><tr><th>Grant ID</th><th>Organization</th><th>Project</th><th>Grants Pack</th><th>Interview/Review Occured</th><th>CPF Submitted</th><th>Funds Dispensed</th><th>Status Page</th></tr></thead>';
+                    html += '<tbody>';
                     for (i=0; i<grants.length; i++) {
                         console.log(grants[i]);
                         html += "<tr>";
@@ -153,6 +154,7 @@
                         html += "<td>" + '<a href="/grant/' + grants[i].grant_id + '" class="btn btn-default">Status Page</a>' + "</td>";
                         html += "</tr>";
                     }
+                    html += '</tbody>';
                     html += '</table>';
                     $("#results").html(html);
                 });
