--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,42 +39,49 @@
     </head>
 
     <body>
+        {% if current_user.is_authenticated %}
         
-        <nav class="navbar navbar-findcond navbar-fixed-top">
-            <div class="container">
-        		<div class="navbar-header">
-        			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-        				<span class="sr-only">Toggle navigation</span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        			</button>
-        			<a class="navbar-brand" href="{{ url_for('index') }}">nova</a>
-        		</div>
-        		<div class="collapse navbar-collapse" id="navbar">
-        			<ul class="nav navbar-nav navbar-right">
-        				<li class="active"><a href="{{ url_for('search') }}">Search <span class="sr-only">(current)</span></a></li>
-        				<li><a href="{{ url_for('interviews') }}">Interviews</a></li>
-        				<li><a href="{{ url_for('small_grants') }}">Small Grants</a></li>
-        				<li class="dropdown">
-        					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
-        					<ul class="dropdown-menu" role="menu">
-        					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
-        						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
-                				<li><a href="#">Schedule</a></li>
-                				<li><a href="#">Settings</a></li>
-        					</ul>
-        				</li>
-        				<li class="dropdown">
-        					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nicholas Boucher <span class="caret"></span></a>
-        					<ul class="dropdown-menu" role="menu">
-        						<li><a href="#">Sign Out</a></li>
-        					</ul>
-        				</li>
-        			</ul>
-        		</div>
-        	</div>
-        </nav>
+            <!-- Navbar -->
+            <style>body { padding-top: 70px; }</style>
+            <nav class="navbar navbar-findcond navbar-fixed-top">
+                <div class="container">
+            		<div class="navbar-header">
+            			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+            				<span class="sr-only">Toggle navigation</span>
+            				<span class="icon-bar"></span>
+            				<span class="icon-bar"></span>
+            				<span class="icon-bar"></span>
+            			</button>
+            			<a class="navbar-brand" href="{{ url_for('index') }}">nova</a>
+            		</div>
+            		<div class="collapse navbar-collapse" id="navbar">
+            			<ul class="nav navbar-nav navbar-right">
+            				<li class="active"><a href="{{ url_for('search') }}">Search <span class="sr-only">(current)</span></a></li>
+            				<li><a href="{{ url_for('interviews') }}">Interviews</a></li>
+            				<li><a href="{{ url_for('small_grants') }}">Small Grants</a></li>
+            				{% if current_user.admin %}
+                				<li class="dropdown">
+                					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
+                					<ul class="dropdown-menu" role="menu">
+                					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
+                						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
+                        				<li><a href="#">Schedule</a></li>
+                        				<li><a href="#">Settings</a></li>
+                					</ul>
+                				</li>
+                			{% endif %}
+            				<li class="dropdown">
+            					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ current_user.first_name }} {{ current_user.last_name | suppress_none }} <span class="caret"></span></a>
+            					<ul class="dropdown-menu" role="menu">
+            						<li><a href="{{ url_for('logout') }}">Sign Out</a></li>
+            					</ul>
+            				</li>
+            			</ul>
+            		</div>
+            	</div>
+            </nav>
+            
+        {% endif %}
 
         <div class="container{{ '-fluid' if fullwidth }}">
 
