Added user management system

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,7 +66,7 @@
                 					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
                 						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
                         				<li><a href="#">Schedule</a></li>
-                        				<li><a href="#">Settings</a></li>
+                        				<li><a href="{{ url_for('settings') }}">Settings</a></li>
                 					</ul>
                 				</li>
                 			{% endif %}
