--- a/static/styles.css
+++ b/static/styles.css
@@ -65,6 +65,10 @@
     font-weight: normal;
 }
 
+.max400 {
+    max-width: 400px;
+}
+
 /* Grants Pack Review Page CSS */
 .status-indicator {
     position: absolute;
