--- a/templates/settings.html
+++ b/templates/settings.html
@@ -17,6 +17,19 @@
     <hr />
     <div class="row">
         <div class="col-md-12">
+            <h2>Grants Pack</h2>
+            <form action="{{ url_for('default_budget') }}" class="form-inline" method="post">
+                <div class="form-group">
+                    <label for="default_budget">Default Weekly Budget: $</label>
+                    <input type="number" step=".01" class="form-control" id="default_budget" name="default_budget" value="{{ default_budget }}">
+                </div>
+                <button type="submit" class="btn btn-default">Update</button>
+            </form>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-md-12">
             <h2>User Management</h2>
             <table class="table table-striped table-hover table-responsive margin40">
                 <thead>
