--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,6 +73,7 @@
             				<li class="dropdown">
             					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ current_user.first_name }} {{ current_user.last_name | suppress_none }} <span class="caret"></span></a>
             					<ul class="dropdown-menu" role="menu">
+            					    <li><a href="{{ url_for('change_password') }}">Change Password</a></li>
             						<li><a href="{{ url_for('logout') }}">Sign Out</a></li>
             					</ul>
             				</li>
